--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
+    "fractional": "^1.0.0",
     "parcel": "^2.8.2"
   },
   "dependencies": {
-    "core-js": "^3.27.1",
+    "@mathematics/fraction": "^1.0.0-beta.4",
     "regenerator-runtime": "^0.13.11"
   }
 }
